add GradientBoostingClassifier with scale result

--- a/competitions/tabular_comp_nov_2021/tabular_comp_nov_2021.ipynb
+++ b/competitions/tabular_comp_nov_2021/tabular_comp_nov_2021.ipynb
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "id": "5c27c67e",
    "metadata": {},
    "outputs": [],
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "45dc52d4",
    "metadata": {},
    "outputs": [],
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "id": "559b52fe",
    "metadata": {},
    "outputs": [],
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "id": "90082d2d",
    "metadata": {},
    "outputs": [
@@ -731,11 +731,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean roc auc score: 0.7045293102526686, for scaler standart\n",
-      "mean roc auc score: 0.7040762189968686, for scaler min_max\n",
-      "mean roc auc score: 0.7047219354265876, for scaler robust\n",
-      "mean roc auc score: 0.7038900300168716, for scaler quantile\n",
-      "{'standart': 0.7045293102526686, 'min_max': 0.7040762189968686, 'robust': 0.7047219354265876, 'quantile': 0.7038900300168716}\n"
+      "mean roc auc score: 0.7046351561264743, for scaler standart\n",
+      "mean roc auc score: 0.7042585191292697, for scaler min_max\n",
+      "mean roc auc score: 0.7043283775054627, for scaler robust\n",
+      "mean roc auc score: 0.704078018907422, for scaler quantile\n",
+      "{'standart': 0.7046351561264743, 'min_max': 0.7042585191292697, 'robust': 0.7043283775054627, 'quantile': 0.704078018907422}\n"
      ]
     }
    ],
@@ -759,11 +759,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "c98a4c2c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grad_boost_clf = GradientBoostingClassifier(n_estimators=100, learning_rate=0.1, loss = 'deviance',\\\n",
+    "                                           criterion = 'mse')\n",
+    "standart_pipeline = Pipeline([('standart_scaler', StandardScaler()), ('model', grad_boost_clf)])\n",
+    "minmax_pipeline = Pipeline([('min_max_scaler', MinMaxScaler()), ('model', grad_boost_clf)])\n",
+    "robust_pipeline = Pipeline([('robust_scaler', RobustScaler()), ('model', grad_boost_clf)])\n",
+    "quantile_pipeline = Pipeline([('quantile_transformer', QuantileTransformer()), ('model', grad_boost_clf)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "edda0dfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_dict = {\n",
+    "    'standart' : standart_pipeline,\n",
+    "    'min_max' : minmax_pipeline,\n",
+    "    'robust' : robust_pipeline,\n",
+    "    'quantile' : quantile_pipeline\n",
+    "    \n",
+    "}\n",
+    "grad_boost_score_list = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "db767cc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean roc auc score: 0.7181639354822084, for scaler standart\n",
+      "mean roc auc score: 0.7182426520869855, for scaler min_max\n",
+      "mean roc auc score: 0.7181639239246554, for scaler robust\n",
+      "mean roc auc score: 0.7181638882641764, for scaler quantile\n",
+      "{'standart': 0.7046351561264743, 'min_max': 0.7042585191292697, 'robust': 0.7043283775054627, 'quantile': 0.704078018907422}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, pipe in pipeline_dict.items():\n",
+    "    cv_scores = np.mean(cross_val_score(pipe,X_train, y_train, scoring = 'roc_auc', n_jobs = -1))\n",
+    "    grad_boost_score_list[key] = cv_scores\n",
+    "    print(f\"mean roc auc score: {cv_scores}, for scaler {key}\")\n",
+    "print(random_forest_score_list)    \n",
+    "# StandardScaler, MinMaxScaler, RobustScaler, QuantileTransformer"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -779,7 +830,45 @@
    "id": "741c0089",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "k_neigh_clf = KNeighborsClassifier(n_estimators=100, learning_rate=0.1, loss = 'deviance',\\\n",
+    "                                           criterion = 'mse')\n",
+    "standart_pipeline = Pipeline([('standart_scaler', StandardScaler()), ('model', grad_boost_clf)])\n",
+    "minmax_pipeline = Pipeline([('min_max_scaler', MinMaxScaler()), ('model', grad_boost_clf)])\n",
+    "robust_pipeline = Pipeline([('robust_scaler', RobustScaler()), ('model', grad_boost_clf)])\n",
+    "quantile_pipeline = Pipeline([('quantile_transformer', QuantileTransformer()), ('model', grad_boost_clf)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58dc9239",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_dict = {\n",
+    "    'standart' : standart_pipeline,\n",
+    "    'min_max' : minmax_pipeline,\n",
+    "    'robust' : robust_pipeline,\n",
+    "    'quantile' : quantile_pipeline\n",
+    "    \n",
+    "}\n",
+    "k_neigh_score_list = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09cc7979",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key, pipe in pipeline_dict.items():\n",
+    "    cv_scores = np.mean(cross_val_score(pipe,X_train, y_train, scoring = 'roc_auc', n_jobs = -1))\n",
+    "    k_neigh_score_list[key] = cv_scores\n",
+    "    print(f\"mean roc auc score: {cv_scores}, for scaler {key}\")\n",
+    "print(k_neigh_score_list)"
+   ]
   },
   {
    "cell_type": "markdown",
